Ontology viewer equivalences for classes and properties plus imports and ontology

--- a/SemanticEnterprise.html
+++ b/SemanticEnterprise.html
@@ -75,7 +75,7 @@
 				<section>
 					<section>
 						<h2 style="font-size: 0.8em;">Le triangle sémiotique en contexte</h2>
-						<img src="./img/TriangleSemiotiqueContexte.png" alt="Catégorisation et Classification"
+						<img src="./img/TriangleSemiotiqueContexte.png" alt="TriangleSemiotiqueContexte"
 							style="max-width: 40%; height: auto;" />
 						<p style="font-size: 0.6em;"> Motivation: définir plus en détail ce qu’est la sémantique afin de
 							la
@@ -987,7 +987,7 @@
 						</p>
 					</section>
 					<section>
-						<p style="font-size: 0.6em;">Le triangle sémiotique étendu au le Monde de l'Information et des
+						<p style="font-size: 0.6em;">Le triangle sémiotique étendu au  Monde de l'Information et des
 							Données
 						</p>
 						<img src="./img/SemiotiqueEtendueData.png" alt="SemiotiqueEtendueData"
